--- a/InstantAnimation/InstantAnimation/Base.lproj/Main.storyboard
+++ b/InstantAnimation/InstantAnimation/Base.lproj/Main.storyboard
@@ -29,6 +29,14 @@
                                     <constraint firstAttribute="width" constant="100" id="VUF-Uf-3dO"/>
                                 </constraints>
                             </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="in6-9Q-IHK" customClass="JKAnimationView" customModule="InstantAnimation" customModuleProvider="target">
+                                <rect key="frame" x="16" y="60" width="100" height="120"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="ElM-7g-PZT"/>
+                                    <constraint firstAttribute="height" constant="120" id="sBo-aR-gv9"/>
+                                </constraints>
+                            </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j1O-N5-Kg0">
                                 <rect key="frame" x="87" y="531" width="200" height="30"/>
                                 <color key="backgroundColor" red="0.54901960780000003" green="0.42352941179999998" blue="0.8980392157" alpha="1" colorSpace="calibratedRGB"/>
@@ -42,17 +50,33 @@
                                     <action selector="changeButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ydk-dS-uS3"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ahk-NM-SFp" customClass="JKAnimationView" customModule="InstantAnimation" customModuleProvider="target">
+                                <rect key="frame" x="258" y="60" width="100" height="120"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="120" id="Djr-Fm-Lrz"/>
+                                    <constraint firstAttribute="width" constant="100" id="OnO-oq-GpB"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="hoK-J1-IqW" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="40" id="GMk-Ql-maw"/>
+                            <constraint firstItem="Ahk-NM-SFp" firstAttribute="bottom" secondItem="hoK-J1-IqW" secondAttribute="bottom" id="HPy-cR-eFT"/>
                             <constraint firstItem="hoK-J1-IqW" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="KST-tx-V0f"/>
+                            <constraint firstItem="hoK-J1-IqW" firstAttribute="top" secondItem="in6-9Q-IHK" secondAttribute="top" id="MJL-UW-utq"/>
+                            <constraint firstItem="hoK-J1-IqW" firstAttribute="leading" secondItem="in6-9Q-IHK" secondAttribute="trailing" constant="21" id="T9H-a8-z6g"/>
+                            <constraint firstItem="Ahk-NM-SFp" firstAttribute="leading" secondItem="hoK-J1-IqW" secondAttribute="trailing" constant="21" id="TaF-v3-fY2"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="j1O-N5-Kg0" secondAttribute="bottom" constant="106" id="Wzc-Fs-9If"/>
+                            <constraint firstItem="hoK-J1-IqW" firstAttribute="bottom" secondItem="in6-9Q-IHK" secondAttribute="bottom" id="fe3-QN-VwF"/>
                             <constraint firstItem="j1O-N5-Kg0" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="pej-FF-xcr"/>
+                            <constraint firstItem="Ahk-NM-SFp" firstAttribute="top" secondItem="hoK-J1-IqW" secondAttribute="top" id="y8M-C9-hg5"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="animationVIew" destination="hoK-J1-IqW" id="Tqk-M7-H4t"/>
+                        <outlet property="leftAnimationView" destination="in6-9Q-IHK" id="V2K-iL-fj6"/>
+                        <outlet property="rightAnimationView" destination="Ahk-NM-SFp" id="hXn-k7-hfK"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
